# Octopus

./: .bazelrc  .gitmodules  README.md  WORKSPACE.bazel  getdeps.sh
docs/designs/: DesignDoc.org
docs/designs/Specs/: Basics.tla  Channel.tla  Octopus.tla  SchProto.tla  Scheduler.tla
src/Base/: BUILD.bazel  utility.hh
src/Base/Network/: BUILD.bazel  network.cc  network.h  network.hh  network_unittests.cc  terminal.h  terminal.hh
src/Base/Network/Message/: Message.h  Message.hh
