

cc_test(
    name = "base_unittests",
    srcs = [
         "//src/Base/Network:network_tests_srcs",
         "utility.hh",
    ],
    copts = ["-std=c++2a", "-Isrc"],
    linkopts = ["-lglog", "-lfmt"],
    deps = [
         "@com_google_googletest//:gtest_main",
         "@folly//:folly"
    ],
)
