

filegroup(
    name = "network_srcs",
    srcs = [
        "network.h",
        "network.cc",
    ],
    visibility = ["//src/Base:__subpackages__"]
)

filegroup(
    name = "network_tests_srcs",
    srcs = [
        "network_unittests.cc",
        ":network_srcs",
    ],
    visibility = ["//src/Base:__subpackages__"]
)
