

filegroup(
    name = "network_srcs",
    srcs = [
        "network.hh",
        "network.cc",
        "terminal.hh",
        "terminal.cc",
    ],
    visibility = ["//src/Base:__subpackages__"]
)

filegroup(
    name = "network_tests_srcs",
    srcs = [
        "network_unittests.cc",
        ":network_srcs",
    ],
    visibility = ["//src/Base:__subpackages__"]
)
